web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__window__windowing-by-default__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nsort age\nderive {rnk = rank age}\n"
---
SELECT
  *,
  RANK() OVER (
    ORDER BY
      age
  ) AS rnk
FROM
  employees
ORDER BY
  age

